# chat_bot_website_crwaler

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
api/: auth.py  auth_db.py  auth_endpoints.py  jwt_utils.py  main.py  registry.py  schemas.py  stripe_endpoints.py  tiers.py
api/voice/: __init__.py  budget.py  call_session.py  router.py  stt.py  tts.py  vad.py
core/: config.py  llm.py  rag.py
data/: auth.db
frontend/: .env.example  README.md  next.config.ts  package-lock.json  package.json
frontend-widget/: build.js  package-lock.json  package.json
frontend-widget/src/: call.css  call.html  call.js  chat.css  chat.html  chat.js  widget.js
frontend/app/: error.tsx  globals.css  icon.tsx  layout.tsx  not-found.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/account/: page.tsx
frontend/app/(app)/api-keys/: page.tsx
frontend/app/(app)/billing/success/: page.tsx
frontend/app/(app)/bot/[id]/: layout.tsx  not-found.tsx  page.tsx
frontend/app/(app)/bot/[id]/_components/: api-tab.tsx  call-tab.tsx  chat-tab.tsx  questions-tab.tsx  (+2 more)
frontend/app/(app)/dashboard/: page.tsx
frontend/app/(app)/dashboard/new/: layout.tsx  page.tsx
frontend/app/(app)/pricing/: page.tsx
frontend/app/login/: layout.tsx  page.tsx
frontend/app/signup/: layout.tsx  page.tsx
frontend/app/widget-demo/: page.tsx
frontend/components/: backend-status-banner.tsx  command-palette.tsx  global-shortcuts.tsx  logo.tsx  theme-toggle.tsx
frontend/components/app/: backend-status-dot.tsx  bot-card.tsx  page-header.tsx  sidebar.tsx
frontend/components/auth/: auth-shell.tsx
frontend/components/billing/: payment-form.tsx
frontend/components/call/: call-interface.tsx
frontend/components/landing/: bento-grid.tsx  cta-section.tsx  demo-section.tsx  features-section.tsx  floating-lamp.tsx  hero-section.tsx  hero-url-input.tsx  how-it-works-section.tsx  lamp-scene.tsx  noise-overlay.tsx  pricing-section.tsx  scroll-to-top.tsx  site-footer.tsx  site-header.tsx
frontend/components/ui/: password-input.tsx  select.tsx
frontend/hooks/: use-keyboard.ts  use-mic-permission.ts
frontend/lib/: api.ts  auth-store.ts  backend-status.ts  brand.ts  landing.ts  utils.ts
frontend/public/: audio-processor.js  sitegenie_animated_logo.html
ingest/: crawler.py  pipeline.py
key/: ssh-key.key  ssh-key.pub
scripts/: manual_test.py  stripe_setup.py
tests/: response_1778511912117.json  response_1778512033657.json  test_api.py  test_auth.py  test_crawler.py  test_pipeline.py  test_rag.py  test_setup.py
