[project]
name = "site-bot"
version = "0.1.0"
description = "Website-scoped chatbot service. Give it a URL, it crawls the site, builds embeddings, and answers questions strictly from that website's content. Chatbase-style, Phase 1."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
license = { text = "MIT" }

dependencies = [
    # Web API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # Crawling
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "tldextract>=5.1.0",
    "playwright>=1.49.0",

    # Text processing + embeddings
    "langchain-text-splitters>=0.3.0",
    "sentence-transformers>=3.3.0",  # local embeddings, free

    # Vector DB
    "chromadb>=0.5.20",

    # LLM client — OpenAI SDK talks to Ollama's OpenAI-compatible /v1 endpoint.
    # No paid keys; Ollama runs locally and is fully free.
    "openai>=1.50.0",

    # Misc
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",  # retry logic for flaky network calls

    # Auth: password hashing and JWTs
    # (bcrypt is a transitive dependency of chromadb anyway; passlib was
    # avoided because its bcrypt backend breaks against bcrypt>=4.1.)
    "bcrypt>=4.0.0",
    "pyjwt>=2.10.0",

    # Billing
    "stripe>=11.4.0",

    # Voice calling — STT, TTS, VAD
    "faster-whisper>=1.0.0",
    "silero-vad>=5.0",
    "edge-tts>=6.1.9",       # kept as a fallback path; ElevenLabs is primary
    "elevenlabs>=1.3.0",
    "websockets>=12.0",
    "numpy>=1.26.0",
    "soundfile>=0.12.1",
    "groq>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",  # also used by fastapi TestClient
    "ruff>=0.7.0",
]

[project.scripts]
site-bot-crawl = "ingest.crawler:main"
site-bot-ingest = "ingest.pipeline:main"
site-bot-api = "api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "ingest", "core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # let the formatter handle line length

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require external services (real browser, network)",
]
addopts = "-m 'not integration'"
